Possible fix for mobile keyboard pushing content offscreen

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -6,6 +6,7 @@ html, body {
     overflow: hidden;
     display: block;
     background-color: #ECF0F1;
+    justify-content: start;
 }
 
 #title {
